--- a/NM/lab 4/GaussMithod/GaussMithod/GaussMithod.vcxproj
+++ b/NM/lab 4/GaussMithod/GaussMithod/GaussMithod.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{0230acf7-e4b3-44f1-8397-c68957ecb17f}</ProjectGuid>
-    <RootNamespace>main</RootNamespace>
+    <ProjectGuid>{5acbfc73-48c8-4234-afa7-215a1d2f563f}</ProjectGuid>
+    <RootNamespace>GaussMithod</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="GaussMithod.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
