--- a/FAaP/lab 8/task 2/main/main.vcxproj.filters
+++ b/FAaP/lab 8/task 2/main/main.vcxproj.filters
@@ -36,5 +36,8 @@
   <ItemGroup>
     <Text Include="data.txt" />
     <Text Include="out.txt" />
+    <Text Include="DataName.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
   </ItemGroup>
 </Project>
