--- a/FAaP/lab 5/task 2/main/main.vcxproj.filters
+++ b/FAaP/lab 5/task 2/main/main.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="iomusic.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="music.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="iomusic.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
