all the labs are completed(NM)

--- a/NM/lab 8/8.2/8.2/8.2.vcxproj
+++ b/NM/lab 8/8.2/8.2/8.2.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{465d23f1-2781-433f-88fd-d72b41297c65}</ProjectGuid>
-    <RootNamespace>task1</RootNamespace>
+    <ProjectGuid>{cfc419df-c28a-41a0-8105-5de9faf2c213}</ProjectGuid>
+    <RootNamespace>My82</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,23 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="task 1.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="..\Generator\rand500.txt" />
-    <Text Include="..\Generator\rand5000.txt" />
-    <Text Include="..\Generator\rand50000.txt" />
-    <Text Include="..\Generator\reverse500.txt" />
-    <Text Include="..\Generator\reverse5000.txt" />
-    <Text Include="..\Generator\reverse50000.txt" />
-    <Text Include="..\Generator\sort500.txt" />
-    <Text Include="..\Generator\sort5000.txt" />
-    <Text Include="..\Generator\sort50000.txt" />
-    <Text Include="F1.txt" />
-    <Text Include="F2.txt" />
-    <Text Include="F3.txt" />
-    <Text Include="out.txt" />
-    <Text Include="test.txt" />
+    <ClCompile Include="8.2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
