--- a/NM/lab 8/8.1/8.1/8.1.vcxproj
+++ b/NM/lab 8/8.1/8.1/8.1.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{465d23f1-2781-433f-88fd-d72b41297c65}</ProjectGuid>
-    <RootNamespace>task1</RootNamespace>
+    <ProjectGuid>{96abc805-a39b-45d6-b1a7-db57c2c12685}</ProjectGuid>
+    <RootNamespace>My81</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,23 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="task 1.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="..\Generator\rand500.txt" />
-    <Text Include="..\Generator\rand5000.txt" />
-    <Text Include="..\Generator\rand50000.txt" />
-    <Text Include="..\Generator\reverse500.txt" />
-    <Text Include="..\Generator\reverse5000.txt" />
-    <Text Include="..\Generator\reverse50000.txt" />
-    <Text Include="..\Generator\sort500.txt" />
-    <Text Include="..\Generator\sort5000.txt" />
-    <Text Include="..\Generator\sort50000.txt" />
-    <Text Include="F1.txt" />
-    <Text Include="F2.txt" />
-    <Text Include="F3.txt" />
-    <Text Include="out.txt" />
-    <Text Include="test.txt" />
+    <ClCompile Include="8.1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
