--- a/NM/lab 8/8.1/8.1/8.1.vcxproj.filters
+++ b/NM/lab 8/8.1/8.1/8.1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GaussMithod.cpp">
+    <ClCompile Include="8.1.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
