--- a/introductory practice/lab 8/task 3/task 3/task 3.vcxproj
+++ b/introductory practice/lab 8/task 3/task 3/task 3.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="task 3.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="words.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
