--- a/second year/third semester/AaDS/lab3/task1/main/main/main.csproj
+++ b/second year/third semester/AaDS/lab3/task1/main/main/main.csproj
@@ -49,6 +49,7 @@
     <Compile Include="BinaryTree.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TreeNode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
