added first task lab3 (AaDS)

--- a/second year/third semester/AaDS/lab3/task1/main/main/main.vcxproj.filters
+++ b/second year/third semester/AaDS/lab3/task1/main/main/main.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="BinaryTree.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="BinaryTreeOutput.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinaryTree.h">
