--- a/second year/third semester/AaDS/lab3/task1/main/main/main.vcxproj
+++ b/second year/third semester/AaDS/lab3/task1/main/main/main.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BinaryTree.cpp" />
+    <ClCompile Include="BinaryTreeOutput.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
