--- a/third year/fifth semester/Object-oriented programming technologies/lab2/pom.xml
+++ b/third year/fifth semester/Object-oriented programming technologies/lab2/pom.xml
@@ -4,6 +4,10 @@
   <groupId>org.example</groupId>
   <artifactId>lab2</artifactId>
   <packaging>war</packaging>
+  <properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+  </properties>
   <version>1.0-SNAPSHOT</version>
   <name>lab2 Maven Webapp</name>
   <url>http://maven.apache.org</url>
@@ -14,6 +18,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version> <!-- Используйте актуальную версию -->
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>lab2</finalName>
