--- a/third year/fifth semester/Object-oriented programming technologies/lab2/pom.xml
+++ b/third year/fifth semester/Object-oriented programming technologies/lab2/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.example</groupId>
-  <artifactId>lab2</artifactId>
+  <artifactId>lab2-3</artifactId>
   <packaging>war</packaging>
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
