Feat: completion lab work

--- a/third year/fifth semester/Object-oriented programming technologies/lab2/src/main/webapp/WEB-INF/web.xml
+++ b/third year/fifth semester/Object-oriented programming technologies/lab2/src/main/webapp/WEB-INF/web.xml
@@ -36,4 +36,8 @@
     <servlet-name>DeleteServlet</servlet-name>
     <url-pattern>/delete.html</url-pattern>
   </servlet-mapping>
+  <error-page>
+    <exception-type>javax.servlet.ServletException</exception-type>
+    <location>/WEB-INF/jsp/error.jsp</location>
+  </error-page>
 </web-app>
